stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_unterminated_char_literal.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/unterminated_char_literal.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/unterminated_char_literal.ml:2:7]
 1 │ fn main() {
 2 │   dbg('a)
   ·       ─┬
   ·        ╰── unterminated character literal
 3 │ }
   ╰────
  help: close character literals with a trailing apostrophe, like `'a'`
